Update to new deployment with correct SHOPIFY_APP_URL

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             button.textContent = 'Processing...';
             
             // Redirect to the Shopify app auth endpoint
-            // Temporary: Using direct Vercel URL until DNS propagates
-            const authUrl = `https://giftloop-qo1cwbd30-roberts-projects-0d90b5aa.vercel.app/auth?shop=${encodeURIComponent(shopValue)}`;
+            // Updated: Using new deployment URL
+            const authUrl = `https://giftloop-6sh51zwo3-roberts-projects-0d90b5aa.vercel.app/auth?shop=${encodeURIComponent(shopValue)}`;
             window.location.href = authUrl;
         });
     </script>
