--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             button.textContent = 'Processing...';
             
             // Redirect to the Shopify app auth endpoint
-            // Updated: Using new deployment URL
-            const authUrl = `https://giftloop-6sh51zwo3-roberts-projects-0d90b5aa.vercel.app/auth?shop=${encodeURIComponent(shopValue)}`;
+            // Updated: Using latest deployment with correct env vars
+            const authUrl = `https://giftloop-oqpauc82e-roberts-projects-0d90b5aa.vercel.app/auth?shop=${encodeURIComponent(shopValue)}`;
             window.location.href = authUrl;
         });
     </script>
